[ci] Added started at and build url

--- a/widgets/ci/ci.html
+++ b/widgets/ci/ci.html
@@ -1,7 +1,6 @@
-<h1 class="title" data-bind="title"></h1>
+<a class="title" data-bind="title" data-source-href="urlValue"></a>
 
 <input class="ci" data-angleOffset=-125 data-angleArc=250 data-width=200 data-readOnly=true data-bind-value="value | shortenedNumber" data-bind-data-min="min" data-bind-data-max="max">
 
-<p class="more-info" data-bind="moreinfo"></p>
-
+<p class="more-info" data-bind="startAtVal"></p>
 <p class="updated-at" data-bind="updatedAtMessage"></p>
