--- a/widgets/ci/ci.html
+++ b/widgets/ci/ci.html
@@ -2,5 +2,5 @@
 
 <input class="ci" data-angleOffset=-125 data-angleArc=250 data-width=200 data-readOnly=true data-bind-value="value | shortenedNumber" data-bind-data-min="min" data-bind-data-max="max">
 
-<p class="more-info" data-bind="startAtVal"></p>
+<p class="start-at" data-bind="startAtVal"></p>
 <p class="updated-at" data-bind="updatedAtMessage"></p>
