[OMR] implement OMR UI

--- a/widgets/omr/omr.html
+++ b/widgets/omr/omr.html
@@ -2,46 +2,48 @@
 <div class="about-text right">@project</div>
 <h1 class="title" data-bind="projectName"></h1>
 
-<div class="separator space-bottom"/>
+<div class="separator"/>
 
 <div class="container">
 
     <div class="about-text left">@merge request</div>
-    <h1 class="title-text" data-bind="mrText"></h1>
-
-    <img style="float: left" class="avatar-circle" data-bind-src="mrAuthorAvatar" />
-    <h1 class="about-text right">
-        <span data-bind="mrCreatedAgo"></span>
-    </h1>
     <div>
         <h1 class="text left">
+            <img class="avatar-circle" data-bind-src="mrAuthorAvatar" />
             <span data-bind="mrAuthor"></span>
             <span class="about-text">author</span>
         </h1>
     </div>
-
+    <h1 class="title-text" data-bind="mrText"></h1>
+    <h1 class="about-text right">
+        <span data-bind="mrCreatedAgo"></span>
+    </h1>
 
     <div data-bind-class="mrAssigneeVisibility">
-        <img style="float: right" class="avatar-circle" data-bind-src="mrAssigneeAvatar" />
-        <h1 class="text left">
+
+        <div class="separator"/>
+        <div class="about-text left">@assignee</div>
+        <h1 class="text right">
             <span data-bind="mrAssignee"></span>
-            <span class="about-text">assignee</span>
+            <img class="avatar-circle" data-bind-src="mrAssigneeAvatar" />
         </h1>
     </div>
 
     <div data-bind-class="mrUpdateVisibility">
 
-        <div class="separator space-top"/>
+        <div class="separator"/>
 
         <div class="about-text left">@last update</div>
-        <h1 class="title-text" data-bind="mrUpdateText"></h1>
         <h1 class="about-text right">
             <span data-bind="mrUpdatedAgo"></span>
         </h1>
+        <h1 class="title-text" style="text-align: center" data-bind="mrUpdateText"></h1>
         <h1 class="text left">
+            <img class="avatar-circle" data-bind-src="mrUpdateAvatar" />
             <span data-bind="mrUpdatedAuthor"></span>
             <span class="about-text">author</span>
         </h1>
+
     </div>
 </div>
 
