--- a/widgets/simpleyoutube/simpleyoutube.html
+++ b/widgets/simpleyoutube/simpleyoutube.html
@@ -1,2 +1,2 @@
 <p class="hint" data-bind="hint"></p>
-<iframe width="300" height="180" data-source-src="url" frameborder="0" allowfullscreen></iframe>
+<iframe data-source-src="url" frameborder="0" allowfullscreen></iframe>
