Move all jobs to audit

--- a/widgets/text/text.html
+++ b/widgets/text/text.html
@@ -2,6 +2,6 @@
 
 <h3 data-bind="text"></h3>
 <div data-bind-class="broken_job_visible">
-    <h3 class="more-info">Broken Jobs</h3>
+    <h3 class="more-info">Dashboard Problems</h3>
     <div  class="more-info circle" data-bind="brokenJobsCount"></div>
 </div>
