[cosmetic] fix issue with chrome

--- a/widgets/omr/omr.html
+++ b/widgets/omr/omr.html
@@ -1,6 +1,6 @@
 <div  class="mrCircle" data-bind="mrsCount"></div>
 <div class="about-text right">@project</div>
-<h1 class="title" data-bind="projectName"></h1>
+<a class="caption" data-source-href="projectUrl"><h1 class="title" data-bind="projectName"></h1></a>
 
 <div class="separator"/>
 
